# Deribit-Trading-System

./: CMakeLists.txt
docs/: DESIGN.md  PERFORMANCE.md  README.md
include/: auth.h  order_manager.h  utils.h  websocket_server.h
src/: auth.cpp  config.json  main.cpp  order_manager.cpp  utils.cpp  websocket_server.cpp
